<?xml version="1.0"?>
<package>
  <name>h4r_bosch_bno055_uart</name>
  <version>0.0.0</version>
  <description>Node in C++ for the Bosch IMU on UART interface for the hardware not being able
  	to have clock skew, like for example raspberry pi (Version 1-3)</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>
  <author email="cyborgx1@gmail.com">Christian Holl</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  
  <export>
  </export>
</package>